# lmp

lmp_pkg/: .editorconfig  .pre-commit-config.yaml  CHANGELOG.md  README.md  USAGE.md  pyproject.toml
lmp_pkg/examples/: basic.toml  deposition_only.toml  modular_comparison.toml  modular_full_pbbm.toml  modular_gi_pk.toml  modular_lung_pk.toml  modular_pk_only.toml  pe_pk_iv_example.py  pk_sweep.toml
lmp_pkg/src/: pe_pk_iv_example.py  test_complete_pbpk_workflow.py  test_orchestrator_solve.py  test_pbpk_real_results.py  test_pe_pk_iv.py  test_vbe_complete_workflow.py
lmp_pkg/src/lmp_pkg/: __init__.py  app_api.py  base.py  run_types.py
lmp_pkg/src/lmp_pkg/builtin/api/: FF.toml  GP.toml
lmp_pkg/src/lmp_pkg/builtin/cfd/: mt_deposition_params.toml
lmp_pkg/src/lmp_pkg/builtin/efficacy/: fev1_baseline_parameters.toml  fev1_disease_progression.toml  fev1_study_config.toml
lmp_pkg/src/lmp_pkg/builtin/gi_tract/: Variability_default.toml  default.toml
lmp_pkg/src/lmp_pkg/builtin/inhalation/: pMDI_variable_trapezoid.toml
lmp_pkg/src/lmp_pkg/builtin/lung_geometry/: Variability_healthy.toml  healthy.toml
lmp_pkg/src/lmp_pkg/builtin/lung_physiology/: Variability_regional.toml
lmp_pkg/src/lmp_pkg/builtin/pk/: default.toml
lmp_pkg/src/lmp_pkg/builtin/product/: DPI_RS01.toml  SMI_K1.toml  reference_product.toml  test_product.toml
lmp_pkg/src/lmp_pkg/builtin/subject/: Variability_healthy_reference.toml  healthy_reference.toml
lmp_pkg/src/lmp_pkg/catalog/: __init__.py  base.py  builtin_loader.py  efficacy_catalog.py  loaders.py
lmp_pkg/src/lmp_pkg/cli/: __init__.py  main.py
lmp_pkg/src/lmp_pkg/config/: __init__.py  constants.py  hydration.py  load.py  model.py  validation.py
lmp_pkg/src/lmp_pkg/contracts/: __init__.py  errors.py  stage.py  types.py
lmp_pkg/src/lmp_pkg/data/cfd/: DataBase.csv  DataBase_July_10.csv  Fitted_CFD_PT010_large_dfp.sav  Fitted_CFD_PT010_large_nondfp.sav  Fitted_CFD_PT010_small_dfp.sav  Fitted_CFD_PT010_small_nondfp.sav  (+2 more)
lmp_pkg/src/lmp_pkg/data_structures/: __init__.py  adapters.py  base.py  comprehensive_results.py  pbbm_results.py  subject_results.py  units.py
lmp_pkg/src/lmp_pkg/domain/: __init__.py  efficacy.py  entities.py  physiology.py  quantity.py  variability.py
lmp_pkg/src/lmp_pkg/engine/: __init__.py  context.py  pipeline.py  registry.py  workflow.py
lmp_pkg/src/lmp_pkg/models/: __init__.py  base.py
lmp_pkg/src/lmp_pkg/scripts/: __init__.py  run_slurm.py
lmp_pkg/src/lmp_pkg/services/: __init__.py  analysis.py  bioequivalence.py  data_import.py  scintigraphy_generator.py  sensitivity_analysis.py  stage_summaries.py  vbe.py  vbe_helpers.py  visualization.py
lmp_pkg/src/lmp_pkg/simulation/: __init__.py  mass_balance.py  mass_balance_detailed.py  ode_runner.py  pipeline_runner.py  subject_tasks.py
lmp_pkg/src/lmp_pkg/solver/: __init__.py  base.py  ode_solver.py  optimization.py  solver_config.py  study_config.py
lmp_pkg/src/lmp_pkg/variability/: __init__.py  apply.py  factors.py  spec.py
lmp_pkg/tests/: conftest.py
lmp_pkg/tests/integration/: test_cli.py  test_new_workflows.py  test_pe_pk_iv.py  test_workflows.py
lmp_pkg/tests/unit/: test_app_api.py  test_catalog.py  test_config.py  test_contracts.py  test_entities.py  test_hydration.py  test_variability.py
lmp_pkg/tests/unit/services/: test_stage_summaries.py
(+753 files in other folders)
